--- a/adnroidprojecttools/src/main/AndroidManifest.xml
+++ b/adnroidprojecttools/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         <receiver
             android:name=".bluetooth.BlueToothDeviceReceiver"
             android:enabled="true"
+            android:exported="true" />
+        <receiver
+            android:name=".blueToothOptions.BlueToothDeviceReceiver"
+            android:enabled="true"
             android:exported="true"></receiver>
     </application>
 
