--- a/adnroidprojecttools/src/main/AndroidManifest.xml
+++ b/adnroidprojecttools/src/main/AndroidManifest.xml
@@ -8,13 +8,24 @@
 
     <application>
         <receiver
-            android:name=".bluetooth.BlueToothDeviceReceiver"
+            android:name=".bluetooth.BlueToothReceicer"
             android:enabled="true"
-            android:exported="true" />
-        <receiver
-            android:name=".blueToothOptions.BlueToothDeviceReceiver"
-            android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.bluetooth.device.action.FOUND"/>
+                <action android:name="android.bluetooth.device.action.BOND_STATE_CHANGED"/>
+                <action android:name="android.bluetooth.device.action.PAIRING_REQUEST"/>
+                <action android:name="android.bluetooth.device.action.CLASS_CHANGED"/>
+                <action android:name="android.bluetooth.device.action.UUID"/>
+                <action android:name="android.bluetooth.device.action.ACL_CONNECTED"/>
+                <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED"/>
+                <action android:name="android.bluetooth.device.action.ACTION_ACL_DISCONNECTED"/>
+                <action android:name="android.bluetooth.device.action.PAIRING_REQUEST"/>
+                <action android:name="android.bluetooth.device.action.SCAN_MODE_CHANGED"/>
+                <action android:name="android.bluetooth.device.action.STATE_CHANGED"/>
+            </intent-filter>
+
+        </receiver>
     </application>
 
 </manifest>
