--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':AdnroidProjectTools', ':AndroidProjectCustomViews'
+include ':app', ':AdnroidProjectTools', ':AndroidProjectCustomViews', ':AndroidBlueToothFromLorenWang', ':AndroidToolsFromLorenWang', ':AndroidCustomViewsFromLorenWang'
