--- a/AndroidCustomViewsFromLorenWang/build.gradle
+++ b/AndroidCustomViewsFromLorenWang/build.gradle
@@ -2,15 +2,11 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-
-
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
-
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -31,6 +27,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //使用这个引入会只在当前项目或者library中使用（compileOnly）
+    compileOnly 'com.lorenwang.tools.android:AndroidToolsFromLorenWang:1.0.0@aar'
 }
 //一定要加在最末尾，否则会导致无法读取到版本号
 apply from: 'maven-release-aar.gradle'
