--- a/AndroidToolsFromLorenWang/build.gradle
+++ b/AndroidToolsFromLorenWang/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -29,6 +29,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //官方变色库
+    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
 
 //一定要加在最末尾，否则会导致无法读取到版本号
