--- a/AndroidCustomViewsFromLorenWang/build.gradle
+++ b/AndroidCustomViewsFromLorenWang/build.gradle
@@ -1,12 +1,16 @@
 apply plugin: 'com.android.library'
 
 android {
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     compileSdkVersion 27
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
-        versionName "1.1.8"
+        versionName "1.1.9"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
