增加750x1334基础的分辨率适配库、

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':AndroidBlueToothFromLorenWang', ':AndroidToolsFromLorenWang', ':AndroidCustomViewsFromLorenWang', ':AndroidAnimFromLorenWang'
+include ':app', ':AndroidBlueToothFromLorenWang', ':AndroidToolsFromLorenWang', ':AndroidCustomViewsFromLorenWang', ':AndroidAnimFromLorenWang', ':AndroidResolutionRatio750x1334FromLorenWang'
